Сделал еще один сторадж, лайки готовы