@@ -3,6 +3,8 @@ package ru.yandex.practicum.filmorate.storage.film.Impl;
 import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.jdbc.BadSqlGrammarException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Component;
 import ru.yandex.practicum.filmorate.exceptions.FilmNotFoundException;
@@ -10,6 +12,7 @@ import ru.yandex.practicum.filmorate.model.film.Film;
 import ru.yandex.practicum.filmorate.storage.film.FilmLikeStorage;
 import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -37,11 +40,19 @@ public class FilmLikeBDStorage implements FilmLikeStorage {
     public Set<Optional<Integer>> getLikes(Integer filmId) {
         //Тут тоже всё просто
         String sql = "SELECT USER_ID FROM FILMORATE_LIKE WHERE FILM_ID = ?";
-        List<Optional<Integer>> filmLikes = jdbcTemplate.query(sql, (resultSet, columnIndex) ->
-                Optional.of(resultSet.getInt("USER_ID")), filmId);
-        //Пишут что метод квери не может возвращать нулы так что проверки не требуется
-        log.debug("Забрали лайки у фильма {}", filmId);
-        return Set.copyOf(filmLikes);
+        try {
+            List<Optional<Integer>> filmLikes = jdbcTemplate.query(sql, (resultSet, columnIndex) ->
+                    Optional.of(resultSet.getInt("USER_ID")), filmId);
+            //Врут что метод квери не может возвращать нулы
+            log.debug("Забрали лайки у фильма {}", filmId);
+            return Set.copyOf(filmLikes);
+        } catch (BadSqlGrammarException e) {
+            log.error("Не получилдось забрать лайки у фильма {}. Подробности: {}",
+                    filmId,
+                    e.getMessage());
+            return Collections.emptySet();
+
+        }
     }
 
     @Override
@@ -50,15 +61,20 @@ public class FilmLikeBDStorage implements FilmLikeStorage {
         String sql = "INSERT INTO FILMORATE_LIKE" +
                 "(FILM_ID, USER_ID)" +
                 "VALUES (?, ?)";
-        int row = jdbcTemplate.update(sql, filmId, userId);
-        if (row == 0) {
-            log.error("Лайк от пользователя {} к фильму {} не поставился", userId, filmId);
-            return false;
-        } else if (row > 1) {
-            log.error("Лайков от пользователя {} к фильму {} слишком много ", userId, filmId);
-            return false;
-        } else if (row < 0) {
+        try {
+            int row = jdbcTemplate.update(sql, filmId, userId);
+            if (row == 0) {
+                log.error("Лайк от пользователя {} к фильму {} не поставился", userId, filmId);
+                return false;
+            } else if (row > 1) {
+                log.error("Лайков от пользователя {} к фильму {} слишком много ", userId, filmId);
+                return false;
+            }
+        } catch (DataIntegrityViolationException e) {
             log.error("Что-то пошло совсем не так. Пользователь {}, фильм {}", userId, filmId);
+            return false;
+        } catch (BadSqlGrammarException e) {
+            log.error("Проблемы с переданными параметрами. Пользователь {}, фильм {}", userId, filmId);
             return false;
         }
         log.debug("Лайк от пользователя {} к фильму {} поставился", userId, filmId);
@@ -71,14 +87,17 @@ public class FilmLikeBDStorage implements FilmLikeStorage {
         String sql = "DELETE FROM FILMORATE_LIKE " +
 //                "(FILM_ID, USER_ID)" +
                 "WHERE FILM_ID = ? AND USER_ID = ?";
-        int row = jdbcTemplate.update(sql, filmId, userId);
-        if (row == 0) {
-            log.error("Лайк от пользователя {} к фильму {} не удалился", userId, filmId);
-            throw new FilmNotFoundException("Лайк от пользователя userId к фильму filmId не удалился");
-        } else if (row > 1) {
-            log.error("Лайков от пользователя {} к фильму {} удалилось слишком много ", userId, filmId);
-            return false;
-        } else if (row < 0) {
+        try {
+            int row = jdbcTemplate.update(sql, filmId, userId);
+            if (row == 0) {
+                log.error("Лайк от пользователя {} к фильму {} не удалился", userId, filmId);
+                throw new FilmNotFoundException("Лайк от пользователя " + userId +
+                        " к фильму " + filmId + " не удалился");
+            } else if (row > 1) {
+                log.error("Лайков от пользователя {} к фильму {} удалилось слишком много ", userId, filmId);
+                return false;
+            }
+        } catch (BadSqlGrammarException e) {
             log.error("Что-то пошло совсем не так. Пользователь {}, фильм {}", userId, filmId);
             return false;
         }
@@ -87,7 +106,7 @@ public class FilmLikeBDStorage implements FilmLikeStorage {
     }
 
     @Override
-    public List<Optional<Film>> getTopFilms(Integer count) {
+    public List<Optional<Film>> getTopFilms(@NonNull Integer count) {
         String sql = "SELECT film.FILM_ID " +
                 "FROM FILMORATE_FILM AS film " +
                 "LEFT JOIN FILMORATE_LIKE AS likes " +
